; ModuleID = '/home/carl/AnghaBench/vlc/modules/hw/d3d9/extr_dxa9.c_GetLock.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/hw/d3d9/extr_dxa9.c_GetLock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@D3DLOCK_READONLY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"Failed to lock surface\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*, i32*)* @GetLock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @GetLock(i32* %0, i32* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  %10 = load i32*, i32** %7, align 8
  %11 = load i32*, i32** %9, align 8
  %12 = call i32 @IDirect3DSurface9_GetDesc(i32* %10, i32* %11)
  %13 = call i32 @FAILED(i32 %12)
  %14 = call i64 @unlikely(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %28

17:                                               ; preds = %4
  %18 = load i32*, i32** %7, align 8
  %19 = load i32*, i32** %8, align 8
  %20 = load i32, i32* @D3DLOCK_READONLY, align 4
  %21 = call i32 @IDirect3DSurface9_LockRect(i32* %18, i32* %19, i32* null, i32 %20)
  %22 = call i32 @FAILED(i32 %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %27

24:                                               ; preds = %17
  %25 = load i32*, i32** %6, align 8
  %26 = call i32 @msg_Err(i32* %25, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %5, align 4
  br label %28

27:                                               ; preds = %17
  store i32 1, i32* %5, align 4
  br label %28

28:                                               ; preds = %27, %24, %16
  %29 = load i32, i32* %5, align 4
  ret i32 %29
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @FAILED(i32) #1

declare dso_local i32 @IDirect3DSurface9_GetDesc(i32*, i32*) #1

declare dso_local i32 @IDirect3DSurface9_LockRect(i32*, i32*, i32*, i32) #1

declare dso_local i32 @msg_Err(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
